<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".features.view.ProcedureIMCActivity">

    <TextView
        android:id="@+id/lType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectType"/>

    <RadioGroup
        android:id="@+id/rgType"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/lType">

        <RadioButton android:id="@+id/rMan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/man"/>

        <RadioButton android:id="@+id/rWoman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/woman"/>

        <RadioButton android:id="@+id/rKid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kid"/>

    </RadioGroup>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rgType">

        <EditText
            android:id="@+id/weight"
            android:hint="@string/weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textColor="@android:color/secondary_text_light" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_layout_weight">

        <EditText
            android:id="@+id/height"
            android:hint="@string/height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textColor="@android:color/secondary_text_light" />

    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_below="@id/input_layout_height"
        android:background="@color/colorPrimary">

        <Button
            android:id="@+id/calculate"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:text="@string/calculate"
            android:textColor="@color/text"
            android:layout_height="50dp"/>

    </RelativeLayout>

</RelativeLayout>
