<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="8dp"
        android:elevation="2dp">

        <RelativeLayout
            android:id="@+id/containerCardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/imagewoman">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp">

                <LinearLayout
                    android:id="@+id/containerWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lWeight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weight"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/tWeight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:text="33,4Kg"/>

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/containerHeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/containerWeight"
                    android:layout_marginTop="6dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lHeight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/height"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/tHeight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:text="1,55m"/>

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/containerResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/containerHeight"
                    android:layout_marginLeft="65dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lResult"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/imc"
                        android:layout_gravity="center"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/tResult"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:text="33.2"/>

                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>


    </android.support.v7.widget.CardView>


</LinearLayout>